--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <ul class="tight">
 <li>API Reauth: all commands can now handle an API reauth when approaching the default threshold of 1,000 API calls</li>
 <ul><li>Reauth will prompt for MFA or manual entry if authentication policies are configured to do so</ul></li>
-<li>Get-VPASAllAccounts: bug that only returned the last iteration of accounts found, big thanks to anishkam98 (<b>https://github.com/anishkam98</b>) for finding the issue and reporting it</li>
+<li>Get-VPASAllAccounts: bug that only returned the last iteration of accounts found, big thanks to anishkam98 (<b><a href="https://github.com/anishkam98" target="blank">https://github.com/anishkam98</a></b>) for finding the issue and reporting it</li>
 <li>Get-VPASDependentAccounts: reworked to now be supported in PrivilegeCloud environments</li>
 <li>Get-VPASDependentAccountDetails: reworked to now be supported in PrivilegeCloud environments</li>
 <li>Get-VPASAllDependentAccounts: reworked to now be supported in PrivilegeCloud environments</li>
